# facevault-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: aiogram_v3.py  python_telegram_bot.py
facevault/: __init__.py  _async_client.py  _client.py  exceptions.py  models.py  webhook.py
src/facevault/: __init__.py  _async_client.py  _client.py  models.py  webhook.py
tests/: conftest.py  test_async_client.py  test_client.py  test_models.py  test_webhook.py
