[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facevault"
version = "0.1.0"
description = "Python SDK for FaceVault.id — privacy-first KYC & identity verification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "FaceVault", email = "dev@facevault.id" },
]
keywords = ["kyc", "identity", "verification", "facevault", "telegram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://facevault.id"
Documentation = "https://facevault.id/docs"
Repository = "https://gitlab.com/khreechari/facevault-python"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["facevault"]
