[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facevault"
dynamic = ["version"]
description = "Python SDK for the FaceVault identity verification API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Khreechari" }]
keywords = ["kyc", "identity", "verification", "facevault", "liveness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24,<1"]

[project.urls]
Homepage = "https://facevault.id"
Documentation = "https://facevault.id/docs"
Repository = "https://github.com/khreechari/facevault-python"

[tool.hatch.version]
path = "src/facevault/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/facevault"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
